samples/_failures_safe/1761214490_748eb9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e5bc69b.c: In function ‘main’:
./samples/SAFE/__tmp_5e5bc69b.c:132:5: error: expected declaration or statement at end of input
  132 |     printf("Matrix transpose of first matrix:\n");
      |     ^~~~~~
